--- a/src/sass/_search-form.scss
+++ b/src/sass/_search-form.scss
@@ -25,7 +25,7 @@ p {
   justify-content: center;
   padding-top:50px;
   padding-bottom: 50px;
-  background-color: rgb(105, 37, 214);
+  background-color: radial-gradient(circle, rgba(238, 174, 202, 1) 0%, rgba(148, 187, 233, 1) 100%);
 }
 
 .search-form input {
